[gd_scene load_steps=5 format=2]

[ext_resource path="res://noto_sans_10.tres" type="DynamicFont" id=1]
[ext_resource path="res://noto_sans_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://MiniMap/MiniMapRoom.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="MiniMapRoom" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -56.0
margin_top = -31.0
margin_right = 56.0
margin_bottom = 31.0
color = Color( 0.490196, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="PanelContainer" parent="."]
margin_left = -55.0
margin_top = -30.0
margin_right = 55.0
margin_bottom = 30.0
rect_min_size = Vector2( 110, 60 )
rect_pivot_offset = Vector2( 55, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 53.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 53.0
custom_constants/margin_right = 2
custom_constants/margin_top = 0
custom_constants/margin_left = 2
custom_constants/margin_bottom = 0

[node name="RoomInfo" type="VBoxContainer" parent="Container/MarginContainer"]
margin_left = 2.0
margin_right = 94.0
margin_bottom = 46.0
custom_constants/separation = -1
alignment = 1

[node name="RoomName" type="Label" parent="Container/MarginContainer/RoomInfo"]
margin_top = 4.0
margin_right = 92.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "未知的房間"
align = 1
valign = 1

[node name="RoomId" type="Label" parent="Container/MarginContainer/RoomInfo"]
margin_top = 27.0
margin_right = 92.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "Room ID"
align = 1
valign = 1
autowrap = true
